<resources>
    <string name="app_name">GeoShapeCal</string>
    <string name="circle_area">Area circulo</string>
    <string name="circle_perimeter">Perimetro circulo</string>
    <string name="cuadro_area">Area cuadrado</string>
    <string name="cuadro_perimeter">Perimetro cuadrado</string>
    <string name="triangle_area">Area triangulo</string>
    <string name="triangle_perimeter">Perimetro triangulo</string>
    <string name="side_cuadro">"Ingrese el valor de un lado "</string>
    <string name="result_cuadro_perimeter">Perimetro</string>
    <string name="Result_perimeter_cuadro">Resultado</string>
    <string name="triangle_text">Ingrese el valor de un lado</string>
    <string name="button_text_content">Perímetro</string>
    <string name="result_perimeter_triangle">Resultado</string>
    <string name="enter_number">Ingrese el radio</string>
    <string name="calculate">Calcular</string>
    <string name="textview_result_pharse">El resultado es:</string>
    <string name="text_view_result">0.0</string>
    <string name="radio_circle_area">Ingrese el valor del radio</string>
    <string name="circle_area_calculate">Calcular area</string>
    <string name="result_circle_area">Resultado del area</string>
    <string name="result_cuadro_area">Area</string>
    <string name="Result_area_cuadro">Resultado</string>
    <string name="basis_value">Ingrese el valor de la base:</string>
    <string name="height_value">Ingrese el valor de la altura:</string>
    <string name="result_area_triangle">Calcular área</string>
    <string name="result_area_triangle_value">Resultado del área</string>
</resources>