<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerimeterCircleActivity">

    <EditText
        android:id="@+id/edit_text_radio"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/enter_number"
        android:inputType="number"
        android:textColor="@color/headline_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_circle" />

    <ImageView
        android:id="@+id/image_view_circle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/yellow_button"
        android:shadowColor="@color/yellow_button"
        android:text="@string/calculate"
        android:textColor="@color/headline_color"
        android:textColorHighlight="@color/yellow_button"
        android:textColorHint="@color/yellow_button"
        android:textColorLink="@color/yellow_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_radio"
        app:rippleColor="@color/yellow_button"
        app:strokeColor="@color/headline_color" />

    <TextView
        android:id="@+id/text_view_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textview_result_pharse"
        android:textColor="@color/button_text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/text_view_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calculate" />

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="50dp"
        android:shadowColor="@color/background_color"
        android:text="@string/text_view_result"
        android:textColor="@color/headline_color"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view_phrase"
        app:layout_constraintTop_toBottomOf="@+id/button_calculate" />

</androidx.constraintlayout.widget.ConstraintLayout>