<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CircleAreaActivity">

    <ImageView
        android:id="@+id/imageViewCircleArea"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/value_circle_area_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/headline_color"
        app:boxStrokeColor="@color/button_text_color"
        app:boxStrokeErrorColor="@color/headline_color"
        app:hintTextColor="@color/button_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCircleArea">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/value_circle_area_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/radio_circle_area"
            android:inputType="number|numberDecimal|numberSigned"
            android:textColor="@color/button_text_color"
            android:textColorHighlight="@color/button_text_color"
            android:textColorHint="@color/button_text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/circle_area_button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="160dp"
        android:backgroundTint="@color/yellow_button"
        android:text="@string/circle_area_calculate"
        android:textColor="@color/headline_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_circle_area_text_input_layout" />

    <TextView
        android:id="@+id/result_circle_area_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="150dp"
        android:text="@string/result_circle_area"
        android:textColor="@color/button_text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle_area_button_calculate" />
</androidx.constraintlayout.widget.ConstraintLayout>